# spine-runtimes

./: .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  .npmignore  CHANGELOG  CHANGELOG.md  CHANGELOG.md.orig  CMakeLists.txt  LICENSE  Package.swift  README.md  Spine.podspec  SpineConfig.cmake.in  SpineCppLite.podspec  SpineRuntime.nuspec  SpineShadersStructs.podspec  bower.json  build.gradle  flags.cmake  package-lock.json  package.json  settings.gradle  spine-runtimes.mkf  update-readmes.sh
spine-c/: .cproject  .project  CMakeLists.txt  Makefile  README.md  Spine-C.sln  Spine-C.vcxproj  Spine-C.vcxproj.filters  spine-c.vcxproj  spine-c.vcxproj.filters
spine-c/data/: spineboy.json
spine-c/example/: main.c
spine-c/include/spine/: Animation.h  AnimationState.h  AnimationStateData.h  Atlas.h  AtlasAttachmentLoader.h  Attachment.h  AttachmentLoader.h  Bone.h  BoneData.h  BoundingBoxAttachment.h  Event.h  EventData.h  ForwardDecl.h  IkConstraint.h  IkConstraintData.h  MeshAttachment.h  PathAttachment.h  PathConstraint.h  PathConstraintData.h  RegionAttachment.h  Skeleton.h  SkeletonBinary.h  SkeletonBounds.h  SkeletonData.h  SkeletonJson.h  Skin.h  SkinnedMeshAttachment.h  Slot.h  SlotData.h  TransformConstraint.h  TransformConstraintData.h  VertexAttachment.h  WeightedMeshAttachment.h  extension.h  spine.h
spine-c/ipch/spine-c-cc64a082/: spine-c-11de6c7b.ipch
spine-c/spine-c-unit-tests/: CMakeLists.txt  README.md  main.cpp
spine-c/spine-c-unit-tests/memory/: KMemory.cpp  KMemory.h  KString.cpp  KString.h
spine-c/spine-c-unit-tests/minicppunit/: MiniCppUnit.cxx  MiniCppUnit.hxx
spine-c/spine-c-unit-tests/teamcity/: README.txt  teamcity_cppunit.cpp  teamcity_cppunit.h  teamcity_messages.cpp  teamcity_messages.h
spine-c/spine-c-unit-tests/tests/: CPP_InterfaceTestFixture.cpp  CPP_InterfaceTestFixture.h  C_InterfaceTestFixture.cpp  C_InterfaceTestFixture.h  EmptyTestFixture.cpp  EmptyTestFixture.h  MemoryTestFixture.cpp  MemoryTestFixture.h  SpineEventMonitor.cpp  SpineEventMonitor.h  TestOptions.h
spine-c/spine-c.xcodeproj/: project.pbxproj
spine-c/src/: SfmlRegionAttachment.c  SfmlRegionAttachment.h  SfmlSkeleton.c  SfmlSkeleton.h  main.c
spine-c/src/spine/: Animation.c  Animation.h  AnimationState.c  AnimationStateData.c  Atlas.c  Atlas.h  AtlasAttachmentLoader.c  AtlasAttachmentLoader.h  Attachment.c  Attachment.h  AttachmentLoader.c  Bone.c  Bone.h  BoneData.c  BoundingBoxAttachment.c  Event.c  EventData.c  IkConstraint.c  IkConstraintData.c  Json.c  Json.h  Skin.c  (+31 more)
spine-cocos2dx/: .gitignore  CMakeLists.txt  README.md  spine-cocos2dx.cmake  spine-cocos2dx.sln
spine-cocos2dx/2/: README.md
spine-cocos2dx/3/: README.md
spine-cocos2dx/3.0/: README.md
spine-cocos2dx/3.1/: README.md
spine-cocos2dx/3.2/: README.md
spine-cocos2dx/cocos2dx/: Place cocos2dx here.txt
spine-cocos2dx/example/: .cocos-project.json  .gitignore  CMakeLists.txt
spine-cocos2dx/example-v4/: .cocos-project.json  CMakeLists.txt
spine-cocos2dx/spine-cocos2dx/: CMakeLists.txt
spine-cpp/: .cproject  .project  CMakeLists.txt  LICENSE  README.md  spineboy-skeleton.json
spine-cpp/data/: spineboy-walk.json
spine-cpp/spine-cpp-lite/: module.modulemap  spine-cpp-light.h  spine-cpp-lite-codegen.py  spine-cpp-lite.cpp  spine-cpp-lite.h
spine-cpp/spine-cpp-unit-tests/: CMakeLists.txt  README.md  main.cpp
spine-cpp/src/: main.cpp
spine-flutter/src/: CMakeLists.txt  compile-wasm.sh  main.cpp  spine_flutter.cpp  spine_flutter.h
spine-glfw/: CMakeLists.txt
spine-glfw/example/: main.cpp
spine-glfw/src/: spine-glfw.cpp  spine-glfw.h  stb_image.h
spine-godot/: CMakeLists.txt  README.md  SConstruct  build.bat  build.sh  convert.py  custom.py  gdextension.gd  livepp.patch  methods.py  setup.bat  setup.sh  spine_godot_extension.gdextension
spine-godot/example/: Spineboy.gd  batch-test.tscn  mix-and-match.gd  project.godot  spineboy.atlas.import  spineboy.gd  spineboy.png.import  spineboy.tres  spineboy.tscn  spineboyanimdata.tres  test.tscn
spine-godot/example-v4/: icon.png.import  project.godot
spine-godot/example-v4-csharp/: nuget.config  project.godot  spine-godot-examples.csproj  spine-godot-examples.sln
spine-godot/example-v4-extension/: project.godot
spine-godot/spine_godot/: GodotSpineExtension.cpp  GodotSpineExtension.h  PackedSpineSkinResource.cpp  PackedSpineSkinResource.h  RaiixSpineExtension.cpp  ResourceFormatLoaderSpineAtlas.cpp  ResourceFormatLoaderSpineAtlas.h  ResourceFormatLoaderSpineSkeletonJsonData.cpp  ResourceFormatLoaderSpineSkeletonJsonData.h  ResourceFormatSaverSpineAtlas.cpp  ResourceFormatSaverSpineAtlas.h  ResourceFormatSaverSpineSkeletonJsonData.cpp  ResourceFormatSaverSpineSkeletonJsonData.h  SCsub  SpineAnimation.cpp  SpineAnimation.h  SpineAnimationState.cpp  SpineAnimationState.h  SpineAnimationStateDataResource.cpp  SpineAnimationStateDataResource.h  SpineAnimationTrack.cpp  SpineAnimationTrack.h  SpineAtlasResource.cpp  SpineAtlasResource.h  SpineAttachment.cpp  SpineAttachment.h  SpineBone.cpp  SpineBone.h  SpineBoneData.cpp  SpineBoneData.h  SpineBoneNode.cpp  SpineBoneNode.h  SpineCollisionShapeProxy.cpp  SpineCollisionShapeProxy.h  SpineCommon.h  SpineConstant.cpp  SpineConstant.h  SpineConstraintData.cpp  SpineConstraintData.h  SpineCustomSkinResource.cpp  (+60 more)
spine-sdl/: CMakeLists.txt  README.md
spine-sdl/example/: main.c  main.cpp
spine-sdl/src/: spine-sdl-c.c  spine-sdl-c.h  spine-sdl-cpp.cpp  spine-sdl-cpp.h  stb_image.h
spine-sfml/: .cproject  .project  CMakeLists.txt  README.md
spine-sfml/c/: CMakeLists.txt  README.md
spine-sfml/cpp/: CMakeLists.txt  README.md
spine-sfml/data/: coin-pro.skel  coin.skel  goblins-mesh.atlas  goblins-mesh.json  goblins-mesh.skel  goblins-skeleton.json  goblins-walk.json  owl-pro.json  owl-pro.skel  raptor-pro.skel  raptor.atlas  raptor.json  raptor.skel  spineboy-ess.skel  spineboy-shear.json  star.atlas  stretchyman-pro.skel  stretchyman.skel  tank.atlas  tank.json  tank.skel  test.json  vine.json  vine.skel
spine-sfml/example/: main.cpp
spine-sfml/src/: main.cpp
(+5122 files in other folders)
